- Finished CreatePadInt; - Added AccessPadInt functionality; - PadInt is now a proxy class where the methods Read() and Write() are simply remote calls to the tx coordinator; - PadIntInsider is now the class that holds the uid and value, which is only relevant inside the servers, and only these maintain them. Future work: - Read and Write operations on the padint held by the client

--- a/CommonTypes/CommonTypes.csproj
+++ b/CommonTypes/CommonTypes.csproj
@@ -100,6 +100,7 @@
     <Compile Include="DstmUtil.cs" />
     <Compile Include="Murmur3.cs" />
     <Compile Include="PadInt.cs" />
+    <Compile Include="PadIntInsider.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="TxException.cs" />
   </ItemGroup>
