- Changed the namespace from DSTM to PADI_DSTM; - Changed ClientNode to PadiDstm; - ClientNode (PadiDstm) is now static, as it should be as a library;

--- a/Master/Master.csproj
+++ b/Master/Master.csproj
@@ -19,7 +19,7 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DSTM</RootNamespace>
+    <RootNamespace>PADI_DSTM</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
