--- a/CrossedLocks/TestsCrossedLocks.csproj
+++ b/CrossedLocks/TestsCrossedLocks.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrossedLocks</RootNamespace>
-    <AssemblyName>CrossedLocks</AssemblyName>
+    <AssemblyName>TestsCrossedLocks</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
