--- a/CrossedLocks/TestsCrossedLocks.csproj
+++ b/CrossedLocks/TestsCrossedLocks.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6DFF01C7-3EFA-4D9D-BF04-D317B8137D8E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CrossedLocks</RootNamespace>
+    <RootNamespace>TestsCrossedLocks</RootNamespace>
     <AssemblyName>TestsCrossedLocks</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
