- Modified the redistribution algorithm: when a server joins it sends an updateNetwork message to all the servers and waits for the response; When every other server has responded the new will has the server which potentially has his objects to send them to the new one. This prevents inconsistencies while there are transactions ongoing. The new server will delay the answer to any calls made to itself while it doesn't have the objects or a message saying "there are no objects for you". - Added 2 tests, which test this new server entry/redistribution behavior;

--- a/CommonTypes/CommonTypes.csproj
+++ b/CommonTypes/CommonTypes.csproj
@@ -98,10 +98,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DstmUtil.cs" />
+    <Compile Include="MasterPackage.cs" />
     <Compile Include="Murmur3.cs" />
     <Compile Include="PadInt.cs" />
     <Compile Include="PadIntInsider.cs" />
     <Compile Include="ServerInfo.cs" />
+    <Compile Include="ServerPackage.cs" />
+    <Compile Include="SInfoPackage.cs" />
     <Compile Include="TxException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
