- Added ability for the coordinator server to crash, and the clients will still be able to resume Txs; - Added tests for the previously described ability; TODO: -- When the coordinator fails and the tx is aborted, we need to remove the replicas of the padints that were created in that tx;

--- a/CommonTypes/CommonTypes.csproj
+++ b/CommonTypes/CommonTypes.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Murmur3.cs" />
     <Compile Include="PadInt.cs" />
     <Compile Include="PadIntInsider.cs" />
+    <Compile Include="ReplicaPackage.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="ServerPackage.cs" />
     <Compile Include="SInfoPackage.cs" />
